feat: add postgresql port in config

--- a/templates/libretime/config.ini.j2
+++ b/templates/libretime/config.ini.j2
@@ -16,7 +16,7 @@ cache_ahead_hours = 1
 
 [database]
 host = {{ libretime_database_host }}
-{# port = {{ libretime_database_post }} #}
+port = {{ libretime_database_port }}
 dbname = {{ libretime_database_name }}
 dbuser = {{ libretime_database_user }}
 dbpass = {{ libretime_database_password }}
