--- a/templates/uwsgi/api.ini.j2
+++ b/templates/uwsgi/api.ini.j2
@@ -5,7 +5,7 @@ master = true
 plugin = python3
 processes = 10
 vacuum = true
-socket = /run/libretime-api.sock
+socket = /run/libretime/api.sock
 
 uid = {{ libretime_user }}
 gid = {{ libretime_user }}
