feat: update database config entry

--- a/templates/libretime/config.ini.j2
+++ b/templates/libretime/config.ini.j2
@@ -18,9 +18,9 @@ cache_ahead_hours = 1
 [database]
 host = {{ libretime_database_host }}
 port = {{ libretime_database_port }}
-dbname = {{ libretime_database_name }}
-dbuser = {{ libretime_database_user }}
-dbpass = {{ libretime_database_password }}
+name = {{ libretime_database_name }}
+user = {{ libretime_database_user }}
+password = {{ libretime_database_password }}
 
 [rabbitmq]
 host = {{ libretime_rabbitmq_host }}
