--- a/templates/systemd/libretime-api.service.j2
+++ b/templates/systemd/libretime-api.service.j2
@@ -8,6 +8,7 @@ KillSignal=SIGQUIT
 RuntimeDirectory=libretime
 
 Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/api.log
+Environment=LIBRETIME_CONFIG_FILEPATH={{ libretime_config_filepath }}
 
 ExecStart=/usr/bin/uwsgi {{ libretime_config_dir }}/api.ini
 Restart=always
