--- a/templates/systemd/libretime-worker.service.j2
+++ b/templates/systemd/libretime-worker.service.j2
@@ -6,13 +6,13 @@ Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/worker.log
 Environment=LIBRETIME_CONFIG_FILEPATH={{ libretime_config_filepath }}
 WorkingDirectory={{ libretime_home }}/worker
 
-ExecStart=/usr/local/bin/celery worker \
+ExecStart=/usr/bin/sh -c 'celery worker \
     --app=libretime_worker.tasks:worker \
     --config=libretime_worker.config \
     --time-limit=1800 \
     --concurrency=1 \
     --loglevel=INFO \
-    --logfile=$LIBRETIME_LOG_FILEPATH
+    --logfile=$LIBRETIME_LOG_FILEPATH'
 Restart=always
 User={{ libretime_user }}
 Group={{ libretime_user }}
