feat: add libretime.target

--- a/templates/systemd/libretime-liquidsoap.service.j2
+++ b/templates/systemd/libretime-liquidsoap.service.j2
@@ -1,5 +1,6 @@
 [Unit]
 Description=LibreTime Liquidsoap Service
+PartOf=libretime.target
 
 [Service]
 Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/liquidsoap.log
