--- a/templates/systemd/libretime-playout.service.j2
+++ b/templates/systemd/libretime-playout.service.j2
@@ -1,5 +1,6 @@
 [Unit]
 Description=LibreTime Playout Service
+PartOf=libretime.target
 
 [Service]
 Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/playout.log
