--- a/templates/systemd/libretime-worker.service.j2
+++ b/templates/systemd/libretime-worker.service.j2
@@ -1,5 +1,6 @@
 [Unit]
 Description=LibreTime Worker Service
+PartOf=libretime.target
 
 [Service]
 Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/worker.log
