feat: move config to libretime_config_raw default variable

--- a/templates/libretime/config.yml.j2
+++ b/templates/libretime/config.yml.j2
@@ -1,63 +1,3 @@
 # See https://libretime.org/docs/admin-manual/setup/configuration/
 
-general:
-  # The public url, this field is REQUIRED
-  public_url: {{ libretime_public_url }}
-  # The internal API authentication key, this field is REQUIRED
-  api_key: {{ libretime_legacy_api_key }}
-
-  # List of origins allowed to access resources on the server, default is []
-  # The public url origin is automatically included
-  allowed_cors_origins: []
-
-  # How many hours ahead Playout should cache scheduled media files, default is 1
-  cache_ahead_hours: 1
-
-  # Authentication adaptor to use for the legacy service, default is local
-  # Specify a class like LibreTime_Auth_Adaptor_FreeIpa to replace the built-in adaptor
-  auth: local
-
-storage:
-  # Path of the storage directory, default is /srv/libretime
-  path: {{ libretime_storage_dir }}
-
-database:
-  # The hostname of the PostgreSQL server, default is localhost
-  host: {{ libretime_postgresql_host }}
-  # The port of the PostgreSQL server, default is 5432
-  port: {{ libretime_postgresql_port }}
-  # The name of the PostgreSQL database, default is libretime
-  name: {{ libretime_postgresql_name }}
-  # The username of the PostgreSQL user, default is libretime
-  user: {{ libretime_postgresql_user }}
-  # The password of the PostgreSQL user, default is libretime
-  password: {{ libretime_postgresql_password }}
-
-rabbitmq:
-  # The hostname of the RabbitMQ server, default is localhost
-  host: {{ libretime_rabbitmq_host }}
-  # The port of the RabbitMQ server, default is 5672
-  port: {{ libretime_rabbitmq_port }}
-  # The virtual host of RabbitMQ server, default is /libretime
-  vhost: {{ libretime_rabbitmq_vhost }}
-  # The username of the RabbitMQ user, default is libretime
-  user: {{ libretime_rabbitmq_user }}
-  # The password of the RabbitMQ user, default is libretime
-  password: {{ libretime_rabbitmq_password }}
-
-playout:
-  # Liquidsoap connection host, default is localhost
-  liquidsoap_host: localhost
-  # Liquidsoap connection port, default is 1234
-  liquidsoap_port: 1234
-
-  # The format for recordings, allowed values ogg,mp3, default is ogg
-  record_file_format: ogg
-  # The bitrate for recordings, default is 256
-  record_bitrate: 256
-  # The samplerate for recordings, default is 256
-  record_samplerate: 44100
-  # The number of channels for recordings, default is 2
-  record_channels: 2
-  # The sample size for recordings, default is 16
-  record_sample_size: 16
+{{ libretime_config_raw }}
