feat: systemd services hardening

--- a/templates/systemd/libretime-api.service.j2
+++ b/templates/systemd/libretime-api.service.j2
@@ -4,13 +4,26 @@ Requires=libretime-api.socket
 PartOf=libretime.target
 
 [Service]
+NoNewPrivileges=true
+CapabilityBoundingSet=
+PrivateDevices=true
+PrivateTmp=true
+PrivateUsers=true
+ProtectClock=true
+ProtectControlGroups=true
+ProtectHome=true
+ProtectHostname=true
+ProtectKernelLogs=true
+ProtectKernelModules=true
+ProtectKernelTunables=true
+ProtectProc=invisible
+ProtectSystem=full
+
+Environment=LIBRETIME_CONFIG_FILEPATH={{ libretime_config_filepath }}
+Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/api.log
+
 Type=notify
 KillMode=mixed
-PrivateTmp=true
-
-Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/api.log
-Environment=LIBRETIME_CONFIG_FILEPATH={{ libretime_config_filepath }}
-
 ExecStart=/usr/bin/gunicorn \
         --workers 4 \
         --worker-class uvicorn.workers.UvicornWorker \
@@ -19,6 +32,7 @@ ExecStart=/usr/bin/gunicorn \
         libretime_api.asgi
 ExecReload=/bin/kill -s HUP $MAINPID
 Restart=always
+
 User={{ libretime_user }}
 Group={{ libretime_user }}
 
