--- a/templates/systemd/libretime-playout.service.j2
+++ b/templates/systemd/libretime-playout.service.j2
@@ -5,12 +5,28 @@ Wants=libretime-liquidsoap.service
 After=libretime-liquidsoap.service
 
 [Service]
-Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/playout.log
+NoNewPrivileges=true
+CapabilityBoundingSet=
+PrivateDevices=true
+PrivateTmp=true
+PrivateUsers=true
+ProtectClock=true
+ProtectControlGroups=true
+ProtectHome=true
+ProtectHostname=true
+ProtectKernelLogs=true
+ProtectKernelModules=true
+ProtectKernelTunables=true
+ProtectProc=invisible
+ProtectSystem=full
+
 Environment=LIBRETIME_CONFIG_FILEPATH={{ libretime_config_filepath }}
+Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/playout.log
 WorkingDirectory={{ libretime_home }}/playout
 
 ExecStart=/usr/local/bin/libretime-playout
 Restart=always
+
 User={{ libretime_user }}
 Group={{ libretime_user }}
 
