--- a/templates/systemd/libretime-worker.service.j2
+++ b/templates/systemd/libretime-worker.service.j2
@@ -3,8 +3,23 @@ Description=LibreTime Worker Service
 PartOf=libretime.target
 
 [Service]
-Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/worker.log
+NoNewPrivileges=true
+CapabilityBoundingSet=
+PrivateDevices=true
+PrivateTmp=true
+PrivateUsers=true
+ProtectClock=true
+ProtectControlGroups=true
+ProtectHome=true
+ProtectHostname=true
+ProtectKernelLogs=true
+ProtectKernelModules=true
+ProtectKernelTunables=true
+ProtectProc=invisible
+ProtectSystem=full
+
 Environment=LIBRETIME_CONFIG_FILEPATH={{ libretime_config_filepath }}
+Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/worker.log
 WorkingDirectory={{ libretime_home }}/worker
 
 ExecStart=/usr/bin/sh -c 'celery worker \
@@ -15,6 +30,7 @@ ExecStart=/usr/bin/sh -c 'celery worker \
     --loglevel=INFO \
     --logfile=$LIBRETIME_LOG_FILEPATH'
 Restart=always
+
 User={{ libretime_user }}
 Group={{ libretime_user }}
 
