--- a/templates/systemd/libretime-liquidsoap.service.j2
+++ b/templates/systemd/libretime-liquidsoap.service.j2
@@ -21,7 +21,7 @@ Environment=LIBRETIME_CONFIG_FILEPATH={{ libretime_config_filepath }}
 Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/liquidsoap.log
 WorkingDirectory={{ libretime_home }}/playout
 
-ExecStart=/usr/local/bin/libretime-liquidsoap
+ExecStart={{ libretime_venv | default('/usr/local') }}/bin/libretime-liquidsoap
 Restart=always
 
 User={{ libretime_user }}
