--- a/templates/systemd/libretime-playout.service.j2
+++ b/templates/systemd/libretime-playout.service.j2
@@ -19,15 +19,12 @@ ProtectKernelTunables=true
 ProtectProc=invisible
 ProtectSystem=full
 
-{% if libretime_venv is defined %}
-Environment=PATH={{ libretime_venv }}/bin:/usr/local/bin:/usr/bin:/bin
-{% endif %}
-
+Environment=PATH={{ libretime_venv_dir }}/bin:/usr/local/bin:/usr/bin:/bin
 Environment=LIBRETIME_CONFIG_FILEPATH={{ libretime_config_filepath }}
 Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/playout.log
 WorkingDirectory={{ libretime_home }}/playout
 
-ExecStart={{ libretime_venv | default('/usr/local') }}/bin/libretime-playout
+ExecStart={{ libretime_venv_dir }}/bin/libretime-playout
 Restart=always
 
 User={{ libretime_user }}
