--- a/templates/systemd/libretime-api.service.j2
+++ b/templates/systemd/libretime-api.service.j2
@@ -24,7 +24,7 @@ Environment=LIBRETIME_LOG_FILEPATH={{ libretime_log_dir }}/api.log
 
 Type=notify
 KillMode=mixed
-ExecStart={{ libretime_venv_dir }}/bin/python3 -m gunicorn \
+ExecStart={{ libretime_venv_dir }}/bin/gunicorn \
         --workers 4 \
         --worker-class uvicorn.workers.UvicornWorker \
         --log-file - \
