feat!: the general.secret_key configuration field is now required
BREAKING CHANGE: The general.secret_key configuration field is now required. Make sure to update your configuration file and add a secret key.

--- a/templates/libretime/config.yml.j2
+++ b/templates/libretime/config.yml.j2
@@ -7,6 +7,9 @@ general:
   # The internal API authentication key.
   # > this field is REQUIRED
   api_key: {{ libretime_api_key }}
+  # The Django API secret key.
+  # > this field is REQUIRED
+  secret_key: {{ libretime_secret_key }}
 
   # List of origins allowed to access resources on the server, the public url
   # origin is automatically included.
