--- a/templates/libretime/config.yml.j2
+++ b/templates/libretime/config.yml.j2
@@ -106,6 +106,13 @@ liquidsoap:
   # > default is ["0.0.0.0"]
   harbor_listen_address: ["0.0.0.0"]
 
+  # Input harbor tls certificate path.
+  harbor_ssl_certificate:
+  # Input harbor tls certificate private key path.
+  harbor_ssl_private_key:
+  # Input harbor tls certificate password.
+  harbor_ssl_password:
+
 stream:
   # Inputs sources.
   inputs:
@@ -120,6 +127,9 @@ stream:
       # Listen port for the main harbor input.
       # > default is 8001
       port: 8001
+      # Whether the input harbor is secured with the tls certificate.
+      # > default is false
+      secure: false
 
     # Show harbor input.
     show:
@@ -132,6 +142,9 @@ stream:
       # Listen port for the show harbor input.
       # > default is 8002
       port: 8002
+      # Whether the input harbor is secured with the tls certificate.
+      # > default is false
+      secure: false
 
   # Output streams.
   outputs:
@@ -219,6 +232,10 @@ stream:
         # Icecast stream genre.
         genre: various
 
+        # Whether the stream should be used for mobile devices.
+        # > default is false
+        mobile: false
+
     # Shoutcast output streams.
     # > max items is 1
     shoutcast:
@@ -264,6 +281,10 @@ stream:
         # Shoutcast stream genre.
         genre: various
 
+        # Whether the stream should be used for mobile devices.
+        # > default is false
+        mobile: false
+
     # System outputs.
     # > max items is 1
     system:
@@ -272,5 +293,9 @@ stream:
         enabled: false
         # System output kind.
         # > must be one of (alsa, ao, oss, portaudio, pulseaudio)
-        # > default is alsa
-        kind: alsa
+        # > default is pulseaudio
+        kind: pulseaudio
+
+        # System output device.
+        # > only available for kind=(alsa, pulseaudio)
+        device:
