--- a/templates/nginx/libretime.conf.j2
+++ b/templates/nginx/libretime.conf.j2
@@ -41,4 +41,11 @@ server {
     proxy_redirect off;
     proxy_pass http://unix:/run/libretime-api.sock;
   }
+
+  # Internal path for serving media files from the API.
+  location /api/_media {
+    internal;
+    # This alias path must match the 'storage.path' configuration field.
+    alias {{ libretime_storage_dir }};
+  }
 }
