test: ensure libretime services can start

--- a/templates/libretime/config.yml.j2
+++ b/templates/libretime/config.yml.j2
@@ -178,6 +178,9 @@ stream:
       - <<: *default_icecast_output
         enabled: false
         mount: extra
+        audio:
+          format: ogg
+          bitrate: 256
 
       - # Whether the output is enabled.
         # > default is false
