fix: systemd service jinja templates

--- a/templates/systemd/libretime-analyzer.service.j2
+++ b/templates/systemd/libretime-analyzer.service.j2
@@ -3,7 +3,7 @@ Description=LibreTime Media Analyzer Service
 PartOf=libretime.target
 
 [Service]
-{%- if libretime_systemd_hardening %}
+{% if libretime_systemd_hardening -%}
 NoNewPrivileges=true
 CapabilityBoundingSet=
 PrivateDevices=true
